[package]
name = "proof-of-sql-benches"
edition.workspace = true
exclude.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
ark-serialize = { workspace = true }
ark-std = { workspace = true, default-features = false }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
bytemuck = { workspace = true }
bumpalo = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = { version = "1.3.1" }
curve25519-dalek = { version = "4", features = ["rand_core"] }
datafusion = { version = '38.0.0', default-features = false }
ff = { version = "0.13.0"}
halo2curves = { version = "0.8.0", default-features = false }
indexmap = { version = "2.8", default-features = false }
nova-snark = { version = "0.41.0", default-features = false }
opentelemetry = { version = "0.23.0" }
opentelemetry-jaeger = { version = "0.20.0" }
proof-of-sql-benchlib = { path = "../proof-of-sql-benchlib" }
proof-of-sql = { path = "../proof-of-sql", default-features = false, features = ["arrow", "hyperkzg_proof", "cpu-perf"] }
proof-of-sql-planner = { path = "../proof-of-sql-planner", default-features = false, features = ["cpu-perf"] }
rand = { version = "0.8", default-features = false }
sqlparser = { version = "0.45.0", default-features = false }
tracing = { version = "0.1.36", default-features = false }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

[lints]
workspace = true

[[bench]]
name = "bench_append_rows"
harness = false
